packages/interbit-ui-components/src/scss/interbit/_timeline-stepper.scss
@import url('https://fonts.googleapis.com/css?family=Roboto:500');

.ibweb-timeline-stepper {

  width: 100%;
  max-width: 976px;
  min-width: 680px;

  .timeline-container {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    padding: 40px 0 0 0;

    .point-container {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: flex-end;
      cursor: pointer;
      margin: 16px 0;
      position: relative;
      height: 40px;

      &.clicked {
        .show-tooltip {
          .point-tooltip {
            background-color: #006AD4;
          }

          .triangle-down {
            border-top: 6px solid #006AD4;
          }

          .triangle-up {
            border-bottom: 4px solid #006AD4;
          }

          .vertical-stripe {
            background-color: #006AD4;
          }
        }
        > .timeline-step > .point {
          bottom: 0;
          width: 12px;
          height: 12px;
          left: calc(50% - 6px);
          background-color: #007AFF;
          border: 4px solid #006AD4;
          border-radius: 50%;

          &.first-point {
            left: -6px;
          }

          &.last-point {
            left: calc(100% - 6px);
          }
        }
      }

      .show-tooltip {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: flex-end;
        visibility: visible;
        opacity: 1;
        transition: visibility 0s, opacity 0.3s linear;
      }

      .hide-tooltip {
        visibility: hidden;
        opacity: 0;
      }

      &.hovered {
        .point-tooltip {
          background-color: #9ECCFF;
        }

        .triangle-down {
          border-top: 6px solid #9ECCFF;
        }

        .triangle-up {
          border-bottom: 4px solid #9ECCFF;
        }

        .vertical-stripe {
          background-color: #9ECCFF;
        }

        > .timeline-step > .point {
          position: absolute;
          bottom: 0;
          width: 12px;
          height: 12px;
          left: calc(50% - 6px);
          background-color: #007AFF;
          border: 4px solid #9ECCFF;

          &.first-point {
            left: -6px;
          }

          &.last-point {
            left: calc(100% - 6px);
          }
        }
      }

      &.before-active {
        .left-line {
          background-color: #9ECCFF;
        }
        .right-line {
          background-color: #9ECCFF;
        }
      }

      &.active {
        .left-line {
          background-color: #9ECCFF;
        }
        .right-line {
          background-color: #007AFF;
        }
        > .timeline-step > .point {
          position: absolute;
          bottom: 0;
          left: calc(50% - 6px);
          width: 12px;
          height: 12px;
          background-color: #2F80ED;
          border: 4px solid #007AFF;
          border-radius: 50%;

          &.first-point {
            left: -6px;
          }

          &.last-point {
            left: calc(100% - 6px);
          }
        }
      }

      &.after-active {
        .left-line {
          background-color: #2F80ED;
        }
        .right-line {
          background-color: #2F80ED;
        }
      }

      &.first-step {
        .point-tooltip {
          left: -100%
        }
        .triangle-down {
          left: -4px;
        }
        .triangle-up {
          left: -4px;
        }
        .vertical-stripe {
          left: -1px;
        }
      }

      &.last-step {
        .point-tooltip {
          left: 0
        }
        .triangle-down {
          right: -4px;
        }
        .triangle-up {
          right: -4px;
        }
        .vertical-stripe {
          right: -1px;
        }
      }

      .timeline-step {
        display: flex;
        flex-wrap: nowrap;
        justify-content: center;
        align-items: center;
        width: 100%;
        height: 12px;

        &.first-step {
          .right-line {
            width: 100%;
          }

        }

        &.last-step {
          .left-line {
            width: 100%;
          }
        }

        .left-line {
          height: 2px;
          width: 50%;
        }

        .right-line {
          height: 2px;
          width: 50%;
        }

        .point {
          position: absolute;
          bottom: 4px;
          left: calc(50% - 2px);
          width: 4px;
          height: 4px;
          background-color: #007AFF;
          border-radius: 50%;

          &.first-point {
            left: -2px;
          }

          &.last-point {
            left: calc(100% - 2px);
          }
        }
      }

      .point-tooltip {
        width: auto;
        min-width: 90px;
        height: 40px;
        max-height: 40px;
        padding: 4px;
        font-family: Roboto, serif;
        font-style: normal;
        line-height: 16px;
        font-size: 12px;
        text-align: center;
        letter-spacing: 0.4px;
        color: white;
        position: absolute;
        border: 1px solid #eee;
        background-color: #2F80ED;
        border-radius: 4px;
        bottom: 22px;
        white-space: nowrap;
      }

      .triangle-down {
        position: absolute;
        bottom: 18px;
        width: 0;
        height: 0;
        border-left: 4px solid transparent;
        border-right: 4px solid transparent;
        border-top: 5px solid #2F80ED;
      }

      .triangle-up {
        position: absolute;
        bottom: 11px;
        width: 0;
        height: 0;
        border-left: 4px solid transparent;
        border-right: 4px solid transparent;
        border-bottom: 4px solid #2F80ED;
      }

      .vertical-stripe {
        position: absolute;
        width: 2px;
        height: 12px;
        bottom: 8px;
        background-color: #2F80ED;
      }
    }
  }

  .controls-container {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    justify-content: space-between;
    align-content: center;

    .primary-button {
      font-family: Roboto, serif;
      font-style: normal;
      line-height: 16px;
      font-size: 14px;
      text-align: center;
      letter-spacing: 1.25px;
      text-transform: uppercase;
      color: #2F80ED;

      &.left {
        margin-right: 64px;
      }

      &.right {
        margin-left: 64px;
      }
    }
    > div.helper {
      margin: auto;
      font-family: Roboto, serif;
      font-style: normal;
      font-weight: normal;
      line-height: 20px;
      font-size: 12px;
      text-align: center;
      letter-spacing: 0.15px;
      color: rgba(0, 0, 0, 0.87);
    }
  }
}

